# SpotLists

./: .editorconfig  README.md  SpotLists.sln
SpotLists/: CMakeLists.txt  CURLDispatcher.cpp  CURLDispatcher.h  CURLRequest.cpp  CURLRequest.h  ContentPage.cpp  ContentPage.h  ContentType.h  HTTPDispatcherFactory.h  HTTPRequestFactory.h  IHTTPDispatcher.h  IHTTPRequest.h  ImageLoader.cpp  ImageLoader.h  MainWindow.cpp  MainWindow.h  MediaControls.cpp  MediaControls.h  MusicPlayer.cpp  MusicPlayer.h  NetworkReply.h  Playlist.cpp  Playlist.h  PlaylistData.cpp  PlaylistData.h  PlaylistElement.h  PlaylistElementGUI.cpp  PlaylistElementGUI.h  PlaylistWidget.cpp  PlaylistWidget.h  SearchBar.cpp  SearchBar.h  SearchPage.cpp  SearchPage.h  SoundLoader.cpp  SoundLoader.h  SpotLists.qrc  SpotLists.ui  SpotLists.vcxproj  SpotLists.vcxproj.filters  (+11 more)
SpotLists/Deployment/qmake/: qtvars_Win32_Deployment.props
SpotLists/Deployment/qmake/temp/: 9140F62F-FDED-491F-8E38-CE57BCCA3D48.SpotLists.designtime.idx  Makefile  qtvars.pro
SpotlistsSetup/: SpotlistsSetup.vdproj
